add playlist search

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^0.3.13",
     "@pinia/nuxt": "^0.5.1",
     "@radix-icons/vue": "^1.0.0",
+    "@vueuse/core": "^10.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "nuxt": "^3.12.3",
