--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
   },
   "framework": "nuxt",
   "aliases": {
-    "components": "@/app/components",
-    "utils": "@/app/lib/utils"
+    "components": "@/components",
+    "utils": "@/lib/utils"
   }
 }
