--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "nuxt": "^3.12.3",
+    "nuxt-typed-router": "^3.6.5",
     "pinia": "^2.1.7",
     "radix-vue": "^1.9.1",
     "shadcn-nuxt": "^0.10.4",
