--- a/package.json
+++ b/package.json
@@ -10,23 +10,21 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/eslint": "^0.3.13",
-    "@pinia/nuxt": "^0.5.1",
-    "@radix-icons/vue": "^1.0.0",
-    "@vueuse/core": "^10.11.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "nuxt": "^3.12.3",
-    "nuxt-typed-router": "^3.6.5",
-    "pinia": "^2.1.7",
-    "radix-vue": "^1.9.1",
-    "shadcn-nuxt": "^0.10.4",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
+    "@nuxt/eslint": "^0.6.0",
+    "@nuxt/ui": "3.0.0-alpha.6",
+    "@pinia/nuxt": "^0.5.5",
+    "@vueuse/core": "^11.1.0",
+    "@vueuse/router": "^11.1.0",
+    "nuxt": "^3.13.2",
+    "nuxt-typed-router": "^3.7.0",
+    "pinia": "^2.2.4",
     "vue": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.1"
-  }
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
+    "@vueuse/nuxt": "^11.1.0",
+    "tailwindcss": "4.0.0-alpha.28",
+    "typescript": "^5.6.3"
+  },
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
