--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^0.6.0",
     "@nuxt/ui": "3.0.0-alpha.6",
     "@pinia/nuxt": "^0.5.5",
+    "@tailwindcss/postcss": "4.0.0-alpha.28",
     "@vueuse/core": "^11.1.0",
     "@vueuse/router": "^11.1.0",
     "nuxt": "^3.13.2",
