--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/eslint": "^0.6.0",
-    "@nuxt/ui": "3.0.0-alpha.6",
-    "@pinia/nuxt": "^0.5.5",
-    "@vueuse/core": "^11.1.0",
-    "@vueuse/router": "^11.1.0",
-    "nuxt": "^3.13.2",
-    "pinia": "^2.2.4",
+    "@nuxt/eslint": "^1.2.0",
+    "@nuxt/ui": "3.0.1",
+    "@pinia/nuxt": "^0.10.1",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/router": "^13.0.0",
+    "nuxt": "^3.16.1",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "latest"
   },
   "devDependencies": {
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
-    "@vueuse/nuxt": "^11.1.0",
-    "tailwindcss": "4.0.0-alpha.28",
-    "typescript": "^5.6.3"
-  },
-  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
+    "@vueuse/nuxt": "^13.0.0",
+    "tailwindcss": "4.0.15",
+    "typescript": "^5.8.2"
+  }
 }
