--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/eslint": "^1.3.0",
-    "@nuxt/ui": "3.0.2",
-    "@pinia/nuxt": "^0.10.1",
-    "@vueuse/core": "^13.0.0",
-    "@vueuse/router": "^13.0.0",
-    "motion-v": "^1.0.0-beta.1",
-    "nuxt": "^3.16.2",
-    "pinia": "^3.0.1",
-    "pinia-plugin-persistedstate": "^4.2.0",
+    "@nuxt/eslint": "^1.4.1",
+    "@nuxt/ui": "3.1.2",
+    "@pinia/nuxt": "^0.11.0",
+    "@vueuse/core": "^13.2.0",
+    "@vueuse/router": "^13.2.0",
+    "motion-v": "^1.1.0-alpha.1",
+    "nuxt": "^3.17.3",
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "latest"
   },
   "devDependencies": {
-    "@vueuse/nuxt": "^13.0.0",
-    "tailwindcss": "4.1.2",
-    "typescript": "^5.8.2"
+    "@vueuse/nuxt": "^13.2.0",
+    "tailwindcss": "4.1.7",
+    "typescript": "^5.8.3"
   }
 }
